--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,10 +8,10 @@ resources:
       type: github
       # GitHub Repo(e.g. <FORK>/PowerAppsTestAutomation)
       # Recommended to Fork or Duplicate if custom auth flows are required
-      name: microsoft/PowerAppsTestAutomation
+      name: wanness6/PowerAppsTestAutomation
       ref: master
       # Name of the GitHub OAuth ADO Service Connection
-      endpoint: <ADO GitHub OAuth Service Connection Name>
+      endpoint: <github.com_wanness6>
 
 parameters:
  - name: image
@@ -53,7 +53,7 @@ jobs:
     value: https://make.powerapps.com
     # Browser PrivateMode usage (true/false)
   - name: PrivateMode
-    value: true
+    value: TestURLs.json
     # FileName where TestAutomationURLs are stored in JSON format
   - name: TestUrlFileName 
     value: TestAutomationURLs.json
